i18n/nl/docusaurus-plugin-content-docs/version-1.3.0/user/user-manual/projects.md
---
title: Project  
sidebar_label: Project  
description: Ontdek hoe u het werk van uw team kunt organiseren met de Projecten-module. Creëer projecten, houd deadlines bij, gebruik snelle veegacties en filter werk op projectfase.
---

# Projecten

De module **Projecten** wordt gebruikt om alle projectgerelateerde activiteiten binnen de Time Management-applicatie aan te maken, te organiseren, te monitoren en te beheren.

Projecten helpen gebruikers om:
* Gerelateerde taken en activiteiten te groeperen.
* Projecttijdlijnen en toegewezen inspanning bij te houden.
* Voortgang en status te monitoren.
* Toewijzingen en eigenaarschap te beheren.
* Werk efficiënt te organiseren over teams of afdelingen heen.

De sectie Projecten fungeert als een gecentraliseerde werkruimte voor alle lopende en voltooide projecten.

---

## Toegang tot de Projecten-module
Om de sectie **Projecten** te openen:
1. Klik op het **Kebab Menu** icoon in de linkerbovenhoek.
2. Selecteer **Projecten** in de zijbalknavigatie.

---

## Overzicht van het Projectenscherm
Het Projectenscherm bevat de volgende componenten:
1. Kopsectie
2. Projectenlijst
3. Paneel Projectinformatie
4. Zoek- en Filteropties
5. Snelle Actieknoppen

---

### Kopsectie
Bevindt zich bovenaan het Projectenscherm.

**Kenmerken:**
* **Zoekicoon**: Wordt gebruikt om projecten snel te zoeken.
* **Raster/Lijstweergave-icoon**: Schakel tussen de beschikbare lay-outs voor projectweergave, waarbij u na het schakelen hoofdprojecten gevolgd door subprojecten kunt zien, of alleen hoofdprojecten, afhankelijk van de toegangsrechten.
* **Toevoegen-icoon**: Creëer een nieuw project.
* **Opslaan-icoon**: Sla nieuw aangemaakte of bewerkte projectdetails op.

---

### Paneel Projectenlijst
Het linkerpaneel toont alle beschikbare projecten.

Elk projectitem biedt een snelle samenvatting, waaronder: Projectnaam, Instantienaam, Huidige Status, Geplande Uren, Startdatum, Einddatum en Achterstallig-indicator (indien van toepassing).

**Voorbeeldstatussen:** Te Doen (To Do), In Uitvoering (In Progress), Voltooid (Completed), In de Wacht (On Hold).

**Aanvullende Indicatoren:**
* **Ster-icoon**: Markeert favoriete of belangrijke projecten.
* **Achterstallig Label**: Markeert projecten die hun geplande voltooiingsdatum hebben overschreden.

---

### Paneel Projectinformatie
Klikken op een willekeurig project in de projectenoverzichtslijst toont gedetailleerde informatie over het geselecteerde project.

---

## Een Nieuw Project Aanmaken
Om een project aan te maken:
1. Open de module **Projecten**.
2. Klik op het **Toevoegen-icoon**.
3. Vul de vereiste projectinformatie in.
4. Klik op de **Opslaan-knop**.

Het project zal vervolgens in de Projectenlijst verschijnen.

### Velden voor Projectaanmaak
* **Account**: Bepaalt tot welke verbonden account of omgeving het project behoort, om ervoor te zorgen dat gegevens op de juiste server worden opgeslagen. Toont de momenteel actieve account en kan worden gewijzigd via een dropdown-menu.
* **Hoofdproject (Parent Project)**: Wordt gebruikt om subprojecten onder een groter project aan te maken om hiërarchie en structuur te verbeteren (bijv. Websitemigratie -> UI Ontwerp).
* **Toegewezen aan (Assignee)**: Bepaalt de gebruiker die verantwoordelijk is voor het project, waardoor eigenaarschap wordt verduidelijkt.
* **Projectnaam**: De primaire titel van het project (bijv. Mobiele App Ontwikkeling, Website Herontwerp).
* **Beschrijving**: Gedetailleerde informatie inclusief doelstellingen, omvang van het werk en verwachte resultaten.
* **Toegewezen Uren**: Geschatte tijd gepland voor het project (bijv. `01:00` = 1 uur) om te helpen bij werkdrukplanning.
* **Kleurindicator**: Maakt het mogelijk om een kleur toe te wijzen om projecten gemakkelijker te identificeren.

### Sectie Geplande Datums
Bepaalt de verwachte projecttijdlijn.
* **Datumbereik**: Biedt snelle datumselectie-voorinstellingen (Vandaag, Deze Week, Deze Maand, Aangepast Bereik).
* **Startdatum**: Bepaalt wanneer het project naar verwachting zal beginnen.
* **Einddatum**: Bepaalt de geplande voltooiingsdatum. *Opmerking: Als de huidige datum de Einddatum overschrijdt en het project onvolledig is, kan het systeem een **Achterstallig** (Overdue) indicator weergeven.*

### Sectie Bijlagen
Stelt gebruikers in staat om projectgerelateerde bestanden te uploaden en te beheren.

**Hoe te Uploaden:** Klik op het **Upload-icoon**, selecteer een bestand en wacht op voltooiing.
**Voordelen:** Houdt bestanden gecentraliseerd, verbetert de samenwerking en synchroniseert automatisch met de server en vice versa.

---

## Projectdetails Bekijken en Bewerken
Het selecteren van een project uit de Projectenlijst toont de details ervan in het rechterpaneel. Gebruikers kunnen de projectstatus, tijdlijn, toegewezen uren, beschrijving, toegewezen gebruiker en bijlagen bekijken.

Om een bestaand project te bewerken:
1. Selecteer het project uit de lijst.
2. Klik op het bewerken-icoon rechtsboven.
3. Werk de vereiste velden bij.
4. Klik op de **Opslaan-knop**.

---

## Beheer van Projectstatus
Projecten doorlopen verschillende statussen tijdens hun levenscyclus.

| Status | Beschrijving |
| --- | --- |
| Te Doen (To Do) | Project is nog niet gestart |
| In Uitvoering (In Progress) | Werk is momenteel gaande |
| Voltooid (Completed) | Projectwerk is afgerond |
| In de Wacht (On Hold) | Tijdelijk gepauzeerd |

---

## Projecten Zoeken en Favoriet Maken
* **Zoeken**: Klik op het **Zoekicoon** en voer de Projectnaam in. Overeenkomende projecten worden direct weergegeven.
* **Favorieten**: Projecten kunnen als favoriet worden gemarkeerd met behulp van het **Ster-icoon** voor snellere toegang en eenvoudigere navigatie.

---

## Projectoverzicht Veegacties
Vanuit het Projectenlijst-overzicht, veeg een projectitem naar **links** om drie actie-iconen te onthullen:
1. **Bekijken**: Opent de gedetailleerde pagina van het geselecteerde project.
2. **Starten**: Start de projecttimer, registreert tijd automatisch en maakt een urenstaat-invoer aan.
3. **Pauzeren**: Stopt de actieve timer en pauzeert de tijdsregistratie.

---

## Projecten Filteren op Fase
De functie **Filteren op Fase** stelt gebruikers in staat om projecten snel te bekijken op basis van hun huidige status.

**Toegang tot het Filter:**
1. Navigeer naar de module **Projecten**.
2. Klik op de **Zwevende Actieknop (FAB)** in de rechterbenedenhoek.
3. Er verschijnt een filterpaneel met de titel **"Filter op Fase"** dat de beschikbare opties toont (Open Projecten, Alle Fasen, Te Doen, In Uitvoering, Voltooid, Geannuleerd).

**Hoe het Werkt:**
Wanneer een fase is geselecteerd, wordt de Projectenlijst automatisch vernieuwd om alleen overeenkomende projecten weer te geven (bijv. het selecteren van **In Uitvoering** toont alleen projecten die momenteel actief worden ontwikkeld). Standaard worden alle fasen weergegeven bij het openen van een projectenlijst-overzicht. Gebruikers kunnen het filter wijzigen of wissen door het paneel opnieuw te openen en **Alle Fasen** te selecteren.